--- a/css/styles.css
+++ b/css/styles.css
@@ -13,16 +13,21 @@ ul {
     list-style-type: none;
 }
 
+.header-link:active,
 .header-link:hover,
 .header-link:focus {
     color: #404BBF;
+    text-decoration: underline;
 }
 
+.address-link:active,
 .address-link:hover,
 .address-link:focus {
     color: #404BBF;
+    text-decoration: underline;
 }
 
+.hero-order-btn:active,
 .hero-order-btn:hover,
 .hero-order-btn:focus {
     color: #4D5AE5;
