--- a/css/styles.css
+++ b/css/styles.css
@@ -45,7 +45,7 @@ ul {
 }
 
 .logo-item {
-    color: #f4f4fd;
+    color: #2e2f42;
     font-family: "Raleway", sans-serif;
     font-size: 18px;
     font-weight: 700;
